# kvit-notes

./: .gitattributes  .gitignore  .gitleaksignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  build.sh  devel.md  features.md  resources.qrc  usage.md  win-build.bat  win-ctest-one.bat  win-deploy.bat  win-selftest.bat  win-test.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: a4-qml-surface.md  backlog.md  guard-test-mutation-audit.md  qa-checklist.md  release-rollback.md
docs/adr/: 0001-files-on-disk-are-authoritative.md  0002-exclusive-write-ownership.md  0003-network-egress-policy.md  0004-cancellation-and-root-switching.md  0005-multi-process-behaviour.md  0006-extension-trust.md  0007-supported-release-platforms.md  0008-module-boundary.md  README.md
packaging/: export-allowlist.txt  qt-lgpl-checklist.md  sbom.yaml
packaging/flatpak/: org.kvit.Notes.metainfo.xml  org.kvit.Notes.yaml
packaging/icons/: generate.sh  kvit.icns  pack_icons.py
packaging/linux/: build-appimage.sh  kvit-notes.desktop
packaging/macos/: build-macos.sh
packaging/manifests/: linux-1.0.0.txt  windows-1.0.0.txt
packaging/windows/: build-windows.ps1  kvit-notes.iss  kvit.rc
qml/: AppShortcuts.qml  BacklinksPanel.qml  BackupRestoreDialog.qml  BlockDelegateBase.qml  BlockDragController.qml  BlockDragLayer.qml  BlockDragState.qml  BlockGutter.qml  BlockInsertDialogs.qml  BlockMenu.qml  BlockSelectionKeys.qml  BulletListDelegate.qml  CalloutBlock.qml  CalloutBlockChrome.qml  CalloutColorPicker.qml  CodeBlockChrome.qml  CodeBlockDelegate.qml  ColorPicker.qml  CrossBlockTextSelection.qml  DateRangePicker.qml  DiagramBlock.qml  DividerDelegate.qml  DividerStylePicker.qml  DocumentSessionDialogs.qml  DropCapOverlay.qml  EdgeAutoScroller.qml  EditableBlock.qml  EditorContextMenus.qml  EditorDropArea.qml  EditorStatusBar.qml  EmbedBlock.qml  ExportDialog.qml  FindBar.qml  FormattingBar.qml  ImageBlock.qml  ImageEffectsPopover.qml  ImportDialog.qml  InlineMathOverlay.qml  KanbanBlock.qml  KvitShell.qml  (+36 more)
screenshots/demo-vault/: Calculus.md  Project board.md  Release pipeline.md  Welcome.md
src/: accessibilityannouncer.cpp  accessibilityannouncer.h  appactions.h  appcontext.cpp  appcontext.h  block.cpp  block.h  blockattributes.cpp  blockattributes.h  blockeditorengine.cpp  blockeditorengine.h  blockkindregistry.cpp  blockkindregistry.h  blockmenumodel.cpp  blockmenumodel.h  blockmodel.cpp  blockmodel.h  clipboardhelper.cpp  codelanguages.h  collectionsearch.cpp  collectionsearch.h  collectionsearchindex.cpp  collectionsearchindex.h  compoundcommand.cpp  convertblockcommand.cpp  convertblockcommand.h  documentexporter.cpp  documentexporter.h  documentimporter.cpp  documentimporter.h  documentmanager.cpp  documentmanager.h  documentoutline.cpp  documentoutline.h  documentsearch.cpp  documentsearch.h  documentselection.cpp  documentselection.h  documentserializer.cpp  documentserializer.h  (+100 more)
src/application/: appactions.h  collectionsearch.cpp  collectionsearch.h  documentexporter.cpp  documentexporter.h  documentmanager.cpp  documentmanager.h  embedmetadata.cpp  embedmetadata.h  extensionregistry.cpp  extensionregistry.h  foldertreemodel.h  navigationhistory.cpp  navigationhistory.h  notelistmodel.h  querydata.cpp  querydata.h  querytools.cpp  querytools.h  quickswitchermodel.h  startupcontroller.cpp  startupcontroller.h
src/content/: blockattributes.cpp  blockattributes.h  codelanguages.cpp  codelanguages.h  fuzzymatch.h  htmltomarkdown.cpp  imageassets.cpp  imageassets.h  kanbandata.cpp  kanbandata.h  markdownformatter.cpp  markdownformatter.h  mathcommandmodel.h  mathrenderer.cpp  mathrenderer.h  notefrontmatter.cpp  tabledata.h  todometa.cpp  todometa.h  wikilinkscanner.cpp  wikilinkscanner.h
src/diagrams/: classlayout.cpp  diagrambudget.h  diagramcanvas.cpp  diagramcanvas.h  diagramclassifier.cpp  diagramclassifier.h  diagramglyphs.h  diagramlayout.cpp  diagramlayout.h  diagrampainter.cpp  diagrampainter.h  diagramrepair.cpp  diagramrepair.h  diagramscene.h  erlayout.cpp  mermaidast.h  mermaidclass.h  mermaidedits.cpp  mermaidedits.h  mermaider.cpp  mermaider.h  mermaidlexer.cpp  mermaidlexer.h  mermaidparser.cpp  mermaidparser.h  mermaidrenderer.cpp  mermaidrenderer.h  mermaidsequence.cpp  mermaidstate.h  (+7 more)
tests/: CMakeLists.txt  faultinjection.h  integration_tests.qrc  test_accessibility.cpp  test_assetstore.cpp  test_asynccancellation.cpp  test_block.cpp  test_blockattributes.cpp  test_blockeditorengine.cpp  test_blockkindregistry.cpp  test_blockmenumodel.cpp  test_blockmodel.cpp  test_clipboardhelper.cpp  test_codelanguages.cpp  test_collectionsearch.cpp  test_commands.cpp  test_diagramclassifier.cpp  test_diagramlayout.cpp  test_diagramrepair.cpp  test_documentexporter.cpp  test_documentimporter.cpp  test_documentmanager.cpp  test_documentoutline.cpp  test_documentsearch.cpp  test_documentselection.cpp  test_documentserializer.cpp  test_documentstats.cpp  test_egresspolicy.cpp  test_embedmetadata.cpp  test_extensionregistry.cpp  test_filewatcher.cpp  test_foldertreemodel.cpp  test_htmltomarkdown.cpp  test_imageassets.cpp  test_integration.cpp  test_kanbandata.cpp  test_llmnormalizer.cpp  test_markdownformatter.cpp  test_mathcommandmodel.cpp  test_mathrenderer.cpp  (+42 more)
tests/fixtures/: llm-diagram.md
tests/perf/: BASELINE.md  corpus.cpp  corpus.h
tools/: apply-license-headers.sh  build_newtx_outline_fonts.py  capture-press-stills.sh  check-appdir-runtime.sh  check-appimage.sh  check-image-leaks.sh  check-layering.py  check-license-payload.sh  check-md-links.py  check-qml-types.py  check-qrc-sync.py  export-gates.sh  export-public-tree.sh  export-public-update.sh  generate-notices.py  generate_newtx_microtex.py  inject-perf-regression.py  probe_newtx_vf.py  run-integration-gate.sh  run-qmllint.sh  uidriver.cpp  update-aur-digest.sh  update-flatpak-commit.sh  verify-perf-budget.sh  win-sync.sh  win.sh
(+138 files in other folders)
